New Feature -> Remove Customer Data (LGPD)
