# src/domain/aggregates/userAccess/usecases/listCustomer/ListCustomerDTO.ts
@@ -16,5 +16,6 @@ export type customerInfo = {
   cpf: string;
   name: string;
   email: string;
+  telefone: string;
   isActive: boolean;
 };
